# Image-Captioning-Architectures

./: .gitignore  LICENSE  README.md  evaluate.py  image_caption.py  pyproject.toml  utils.py
data/: README.md  __init__.py  dataloader.py  flickr8k_dataset.py  flickr_dataset.py  vocab.py
data/image/: __init__.py  image_dataset.py  image_utils.py  transforms.py
data/text/: __init__.py  vocabulary.py
examples/: README.md  advanced_data_usage.py  advanced_usage.py  basic_data_usage.py  test_split_transforms.py
model_cnn_lstm/: __init__.py  cnn_encoder.py  generator.py  lstm_decoder.py  model.py
model_vit/: README.md  __init__.py  builder.py  decoder.py  generator.py  model.py  vit_encoder.py
models/: __init__.py  model.py
scripts/: download_flickr30k.sh  download_flickr8k.sh  run_eval.sh  train.py  train_cnn.py  train_vit.py
tests/: test_split_transforms.py
train_cnn/: __init__.py  config.py  trainer.py
train_vit/: __init__.py  config.py  train.py  trainer.py
